...
  String get backButton => 'Back';

  @override
  String get closeButton => 'Close';

  @override
  String get doneButton => 'Done';

  @override
  String get moreLabel => 'more';

  @override
  String get actionNext => 'Next';

  @override
  String get cancelButton => 'Cancel';

  @override
  String get selectLabel => 'Select';

  @override
  String get notNowButton => 'Not now';
...
